--- a/challenge/index.html
+++ b/challenge/index.html
@@ -60,9 +60,9 @@
   <!-- ==========================================================================================================================================-->
   <!-- ==========================================================================================================================================-->
   <div class="wrapper bg-primary">
-    <header id="header" class="container d-flex justify-content-between align-center" data-header>
+    <header id="header" class="container d-flex justify-content-between align-center p-4" data-header>
       <div id="logo">
-        <h1 class=""><a>Software Developer</a></h1>
+        <h1 class="text-white"><a>Software Developer</a></h1>
       </div>
       <nav id="main-nav">
         <ul id="menu" class="d-flex">
@@ -79,104 +79,6 @@
       </button>
     </header>
   </div>
-  <!-- <header id="header">
-    <div class="collapse bg-dark" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
-            <h4 class="text-white">About</h4>
-            <p class="text-muted">Add some information about the album below, the author, or any other
-              background context. Make it a few sentences long so folks can pick up some informative
-              tidbits. Then, link them off to some social networking sites or contact information.</p>
-          </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Contact</h4>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Follow on Twitter</a></li>
-              <li><a href="#" class="text-white">Like on Facebook</a></li>
-              <li><a href="#" class="text-white">Email me</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="navbar box-shadow">
-      <div class="container d-flex justify-content-between">
-        <div id="logo">
-          <h1><a href="">
-              Software Developer</a></h1>
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
-          aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </div>
-  </header> -->
-  <!-- <ul id="menu">
-    <li class="ui-state-disabled">
-      <div>Toys (n/a)</div>
-    </li>
-    <li>
-      <div>Books</div>
-    </li>
-    <li>
-      <div>Clothing</div>
-    </li>
-    <li>
-      <div>Electronics</div>
-      <ul>
-        <li class="ui-state-disabled">
-          <div>Home Entertainment</div>
-        </li>
-        <li>
-          <div>Car Hifi</div>
-        </li>
-        <li>
-          <div>Utilities</div>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <div>Movies</div>
-    </li>
-    <li>
-      <div>Music</div>
-      <ul>
-        <li>
-          <div>Rock</div>
-          <ul>
-            <li>
-              <div>Alternative</div>
-            </li>
-            <li>
-              <div>Classic</div>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <div>Jazz</div>
-          <ul>
-            <li>
-              <div>Freejazz</div>
-            </li>
-            <li>
-              <div>Big Band</div>
-            </li>
-            <li>
-              <div>Modern</div>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <div>Pop</div>
-        </li>
-      </ul>
-    </li>
-    <li class="ui-state-disabled">
-      <div>Specials (n/a)</div>
-    </li>
-  </ul> -->
 
   <main role="main">
     <section class="jumbotron bgd-img overlay parallax" style="background-image: url('assets/images/java-coding.png');">
@@ -199,7 +101,7 @@
         <ul class="row m-0 p-0 row-gap-3">
           <li class="col-lg-3 text-light">
             <div><a href="#"><i class="fas fa-phone"></i></a> <span>
-                +00 (77) 1234 7890</span></div>
+                +(44)77 9876 5432</span></div>
           </li>
           <li class="col-lg-3 text-light">
             <div><a href="#"><i class="fas fa-envelope"></i></a> <span> support@software.com</span></div>
@@ -209,14 +111,13 @@
                 09.00am - 17.30pm</span></div>
           </li>
           <li class="col-lg-3 text-light">
-            <div><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span>Directions to <a href="#">our
-                  location</a></span></div>
+            <div><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span>Based in Hampshire</span></div>
           </li>
         </ul>
       </section>
     </div>
 
-    <div class="wrapper row-3">
+    <div class="wrapper bg-white">
       <main>
         <section id="services" class="container">
           <div class="text-black center mb-5">
@@ -229,7 +130,7 @@
                 <article class="card mb-4 box-shadow">
                   <div class="card-header">
                     <a>
-                      <i class="fa-solid fa-folder-open"></i>
+                      <i class="fa-solid fa-globe"></i>
                     </a>
                     <h3 class="heading text-start">Web Development</h3>
                   </div>
@@ -255,7 +156,7 @@
                 <article class="card mb-4 box-shadow">
                   <div class="card-header">
                     <a>
-                      <i class="fa-solid fa-folder-open"></i>
+                      <i class="fa-solid fa-user-gear"></i>
                     </a>
                     <h3 class="heading text-start">Content Management Systems</h3>
                   </div>
@@ -309,7 +210,7 @@
                 <article class="card mb-4 box-shadow">
                   <div class="card-header">
                     <a>
-                      <i class="fa-solid fa-folder-open"></i>
+                      <i class="fa-solid fa-database"></i>
                     </a>
                     <h3 class="heading text-start">Database Administration</h3>
                   </div>
@@ -337,7 +238,7 @@
                 <article class="card mb-4 box-shadow">
                   <div class="card-header">
                     <a>
-                      <i class="fa-solid fa-folder-open"></i>
+                      <i class="fa-solid fa-server"></i>
                     </a>
                     <h3 class="heading text-start">Server Administration</h3>
                   </div>
@@ -360,7 +261,7 @@
                 <article class="card mb-4 box-shadow">
                   <div class="card-header">
                     <a>
-                      <i class="fa-solid fa-folder-open"></i>
+                      <i class="fa-solid fa-palette"></i>
                     </a>
                     <h3 class="heading text-start">Graphics & Illustration</h3>
                   </div>
@@ -404,13 +305,12 @@
 
 
 
-  <div class="wrapper row5">
+  <div class="wrapper bg-grey-light">
     <section id="technologies" class="hoc container">
       <div class="sectiontitle">
-        <p class="nospace font-xs">Nisi velit nec turpis nullam vitae</p>
         <h6 class="heading">Technologies</h6>
       </div>
-      <div id="tabs" class="nospace">
+      <div id="tabs">
         <ul>
           <li><a href="#tabs-1">Backend</a></li>
           <li><a href="#tabs-2">Frontend</a></li>
@@ -558,7 +458,7 @@
   </div>
   <!-- ==========================================================================================================================================-->
   <!-- ==========================================================================================================================================-->
-  <div class="wrapper row-4">
+  <div class="wrapper bg-primary">
     <section id="webdev" class="container">
       <header class="section-header">
         <h2 class="heading">Web Development</h2>
@@ -632,7 +532,7 @@
   <!-- ==========================================================================================================================================-->
   <!-- ==========================================================================================================================================-->
   <!-- ==========================================================================================================================================-->
-  <div class="wrapper row-6">
+  <div class="wrapper bg-grey-light">
     <section id="about" class="container">
       <header class="section-header">
         <h2 class="heading">About</h2>
@@ -681,7 +581,7 @@
   </div>
   <!-- ==========================================================================================================================================-->
   <!-- ==========================================================================================================================================-->
-  <div class="wrapper row-7">
+  <div class="wrapper bg-white">
     <section id="cta" class="container">
       <header class="section-header">
         <h2 class="heading">Request Form</h2>
@@ -752,7 +652,7 @@
   </div>
   <!-- ==========================================================================================================================================-->
   <!-- ==========================================================================================================================================-->
-  <div class="wrapper row-8">
+  <div class="wrapper bg-dark">
     <section id="footer" class="container">
       <div class="col">
         <p class="heading">About</p>
@@ -825,7 +725,7 @@
   </div>
   <!-- ==========================================================================================================================================-->
   <!-- ==========================================================================================================================================-->
-  <div class="wrapper row-9">
+  <div class="wrapper bg-black">
     <div id="copyright" class="container">
       <p>Copyright &copy; <span class="year">2027</span> by Software Developer
       </p>
@@ -834,7 +734,6 @@
   <!-- ==========================================================================================================================================-->
   </main>
   <!-- ==========================================================================================================================================-->
-  <a id="scrollUp" href="#top" aria-label="scroll to top"></a>
 </body>
 <!-- ==========================================================================================================================================-->
 
